- Added endpoint to create tenant and its owning user together
