# backend/docs/openapi/openapi.yaml
@@ -40,10 +40,10 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/AnimalEvent'
-        "401":
-          description: Not Authorized
         "403":
           description: Not Allowed
+        "401":
+          description: Not Authorized
       security:
       - SecurityScheme: []
     put:
@@ -61,10 +61,10 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/AnimalEvent'
-        "401":
-          description: Not Authorized
         "403":
           description: Not Allowed
+        "401":
+          description: Not Authorized
       security:
       - SecurityScheme: []
     post:
@@ -82,10 +82,10 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/AnimalEvent'
-        "401":
-          description: Not Authorized
         "403":
           description: Not Allowed
+        "401":
+          description: Not Authorized
       security:
       - SecurityScheme: []
     delete:
@@ -100,10 +100,10 @@ paths:
       responses:
         "204":
           description: No Content
-        "401":
-          description: Not Authorized
         "403":
           description: Not Allowed
+        "401":
+          description: Not Authorized
       security:
       - SecurityScheme: []
   /animal-procedures:
@@ -137,10 +137,10 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/AnimalProcedure'
-        "401":
-          description: Not Authorized
         "403":
           description: Not Allowed
+        "401":
+          description: Not Authorized
       security:
       - SecurityScheme: []
     put:
@@ -158,10 +158,10 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/AnimalProcedure'
-        "401":
-          description: Not Authorized
         "403":
           description: Not Allowed
+        "401":
+          description: Not Authorized
       security:
       - SecurityScheme: []
     post:
@@ -179,10 +179,10 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/AnimalProcedure'
-        "401":
-          description: Not Authorized
         "403":
           description: Not Allowed
+        "401":
+          description: Not Authorized
       security:
       - SecurityScheme: []
     delete:
@@ -197,10 +197,10 @@ paths:
       responses:
         "204":
           description: No Content
-        "401":
-          description: Not Authorized
         "403":
           description: Not Allowed
+        "401":
+          description: Not Authorized
       security:
       - SecurityScheme: []
   /animals:
@@ -449,10 +449,10 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/Animal'
-        "401":
-          description: Not Authorized
         "403":
           description: Not Allowed
+        "401":
+          description: Not Authorized
       security:
       - SecurityScheme: []
     put:
@@ -470,10 +470,10 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Animal'
-        "401":
-          description: Not Authorized
         "403":
           description: Not Allowed
+        "401":
+          description: Not Authorized
       security:
       - SecurityScheme: []
     post:
@@ -491,10 +491,10 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Animal'
-        "401":
-          description: Not Authorized
         "403":
           description: Not Allowed
+        "401":
+          description: Not Authorized
       security:
       - SecurityScheme: []
     delete:
@@ -509,10 +509,10 @@ paths:
       responses:
         "204":
           description: No Content
-        "401":
-          description: Not Authorized
         "403":
           description: Not Allowed
+        "401":
+          description: Not Authorized
       security:
       - SecurityScheme: []
   /auth/login:
@@ -557,10 +557,10 @@ paths:
           description: OK
           content:
             application/json: {}
-        "401":
-          description: Not Authorized
         "403":
           description: Not Allowed
+        "401":
+          description: Not Authorized
       security:
       - SecurityScheme: []
   /auth/logoutAll:
@@ -572,10 +572,10 @@ paths:
           description: OK
           content:
             application/json: {}
-        "401":
-          description: Not Authorized
         "403":
           description: Not Allowed
+        "401":
+          description: Not Authorized
       security:
       - SecurityScheme: []
   /auth/refresh:
@@ -589,10 +589,10 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/RefreshResponse'
-        "401":
-          description: Not Authorized
         "403":
           description: Not Allowed
+        "401":
+          description: Not Authorized
       security:
       - SecurityScheme: []
   /auth/token/validate:
@@ -606,10 +606,10 @@ paths:
             application/json:
               schema:
                 type: boolean
-        "401":
-          description: Not Authorized
         "403":
           description: Not Allowed
+        "401":
+          description: Not Authorized
       security:
       - SecurityScheme: []
   /tenants:
@@ -658,10 +658,10 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Tenant'
-        "401":
-          description: Not Authorized
         "403":
           description: Not Allowed
+        "401":
+          description: Not Authorized
       security:
       - SecurityScheme: []
     post:
@@ -679,10 +679,10 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Tenant'
-        "401":
-          description: Not Authorized
         "403":
           description: Not Allowed
+        "401":
+          description: Not Authorized
       security:
       - SecurityScheme: []
     delete:
@@ -697,10 +697,10 @@ paths:
       responses:
         "204":
           description: No Content
-        "401":
-          description: Not Authorized
         "403":
           description: Not Allowed
+        "401":
+          description: Not Authorized
       security:
       - SecurityScheme: []
   /users:
@@ -785,10 +785,10 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/User'
-        "401":
-          description: Not Authorized
         "403":
           description: Not Allowed
+        "401":
+          description: Not Authorized
       security:
       - SecurityScheme: []
     put:
@@ -811,10 +811,10 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/User'
-        "401":
-          description: Not Authorized
         "403":
           description: Not Allowed
+        "401":
+          description: Not Authorized
       security:
       - SecurityScheme: []
     post:
@@ -832,10 +832,10 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/User'
-        "401":
-          description: Not Authorized
         "403":
           description: Not Allowed
+        "401":
+          description: Not Authorized
       security:
       - SecurityScheme: []
     delete:
@@ -852,10 +852,32 @@ paths:
           description: OK
           content:
             application/json: {}
-        "401":
-          description: Not Authorized
         "403":
           description: Not Allowed
+        "401":
+          description: Not Authorized
+      security:
+      - SecurityScheme: []
+  /users/createTenantAndSuperUser:
+    post:
+      tags:
+      - User Resource
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/CreateTenantAndUserRequest'
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/CreateTenantAndUserResponse'
+        "403":
+          description: Not Allowed
+        "401":
+          description: Not Authorized
       security:
       - SecurityScheme: []
   /users/email/change:
@@ -874,10 +896,10 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Unit'
-        "401":
-          description: Not Authorized
         "403":
           description: Not Allowed
+        "401":
+          description: Not Authorized
       security:
       - SecurityScheme: []
   /users/email/change/confirm:
@@ -897,10 +919,10 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Unit'
-        "401":
-          description: Not Authorized
         "403":
           description: Not Allowed
+        "401":
+          description: Not Authorized
       security:
       - SecurityScheme: []
   /users/emailTaken:
@@ -941,10 +963,10 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Unit'
-        "401":
-          description: Not Authorized
         "403":
           description: Not Allowed
+        "401":
+          description: Not Authorized
       security:
       - SecurityScheme: []
   /users/password/reset:
@@ -1007,10 +1029,10 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Unit'
-        "401":
-          description: Not Authorized
         "403":
           description: Not Allowed
+        "401":
+          description: Not Authorized
       security:
       - SecurityScheme: []
   /users/register/{id}:
@@ -1276,6 +1298,26 @@ components:
       - COURT_OF_GRACE
       - DECEASED
       type: string
+    CreateTenantAndUserRequest:
+      required:
+      - tenant
+      - user
+      type: object
+      properties:
+        tenant:
+          $ref: '#/components/schemas/Tenant'
+        user:
+          $ref: '#/components/schemas/User'
+    CreateTenantAndUserResponse:
+      required:
+      - tenantId
+      - userId
+      type: object
+      properties:
+        tenantId:
+          $ref: '#/components/schemas/UUID'
+        userId:
+          $ref: '#/components/schemas/UUID'
     LocalDate:
       format: date
       type: string
