# backend/src/main/kotlin/de/felix/shelterapp/user/CreateTenantAndUserRequest.kt
@@ -1,0 +1,8 @@
+package de.felix.shelterapp.user
+
+import de.felix.shelterapp.tenant.Tenant
+
+data class CreateTenantAndUserRequest(
+    val tenant: Tenant,
+    val user: User
+)
