# backend/src/main/kotlin/de/felix/shelterapp/user/CreateTenantAndUserResponse.kt
@@ -1,0 +1,8 @@
+package de.felix.shelterapp.user
+
+import java.util.*
+
+data class CreateTenantAndUserResponse(
+    val tenantId: UUID,
+    val userId: UUID
+)
